@@ -24,6 +24,7 @@ ImageMagick Changes</font></font></font></b></td>
 <dd>
 <pre>
 2001-09-12  Cristy  <cristy@mystic.es.dupont.com>
+	* Text drawing now handles UTF8-encoding.
 	* Fixed uninitialized pointer in pixel cache subsystem.
 	* PingImage() now reports attributes for all images in
 	  an image sequence.
