@@ -1,4 +1,5 @@
 2001-09-12  Cristy  <cristy@mystic.es.dupont.com>
+	* Text drawing now handles UTF8-encoding.
 	* Fixed uninitialized pointer in pixel cache subsystem.
 	* PingImage() now reports attributes for all images in
 	  an image sequence.
